<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="app_notification_channel_name" translatable="true">@string/app_name</string>
    <string name="app_notification_channel_id" translatable="false">app_channel</string>
    <string name="check_the_status">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">Download Details</string>
    <string name="glide">Glide</string>
    <string name="load_app">Load app</string>
    <string name="retrofit">Retrofit</string>

    <string name="download">Download</string>
    <string name="we_are_loading">We are loading</string>

    <string name="download_successful_message">The file %s for %s has been downloaded.</string>
    <string name="download_failed_message">The file %s for %s was not found.</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="cloud_icon">Cloud icon</string>
</resources>
