<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_main_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/cloudIcon"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="@dimen/common_margin"
        android:contentDescription="Cloud icon"
        android:src="@drawable/ic_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/optionsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="@dimen/common_margin"
        android:checkedButton="@+id/rbGlide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbGlide"
            style="@style/RadioGroupOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide" />

        <RadioButton
            android:id="@+id/rbLoadApp"
            style="@style/RadioGroupOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_app" />

        <RadioButton
            android:id="@+id/rbRetrofit"
            style="@style/RadioGroupOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:buttonText="@string/download"
        app:buttonTextColor="@color/white"
        app:buttonBackgroundColor="@color/colorPrimary"
        app:buttonLoadingText="@string/we_are_loading"
        app:buttonLoadingTextColor="@color/colorPrimary"
        app:buttonLoadingBackgroundColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.motion.widget.MotionLayout>